--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "node": "4.x"
   },
+  "bin": {
+    "ettg": "bin/cli"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
