--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ettg",
   "version": "0.0.1",
-  "description": "The erotric thriller title generator.",
+  "description": "The erotic thriller title generator.",
   "main": "main.js",
   "engines": {
     "node": "4.x"
@@ -20,5 +20,5 @@
     "tweed"
   ],
   "author": "spasm!turkey",
-  "license": "MIT"
+  "license": "ISC"
 }
