--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "shannon",
     "tweed"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mamacdon/ettg"
+  },
   "author": "spasm!turkey",
   "license": "ISC",
   "dependencies": {
