--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "4.x"
   },
   "bin": {
-    "ettg": "bin/cli"
+    "ettg": "./bin/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
