--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The erotic thriller title generator.",
   "main": "main.js",
   "engines": {
-    "node": "14.10.x"
+    "node": ">=14.10.x"
   },
   "bin": {
     "ettg": "./bin/cli.js"
